# NeuralOS

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  paper.tex
cmake/: CompilerWarnings.cmake  FetchDependencies.cmake  SimdDetection.cmake
examples/: standalone.cpp
src/: CMakeLists.txt
src/api/: CMakeLists.txt  libneuralos.cpp  libneuralos.h
src/cli/: CMakeLists.txt  main.cpp
src/converter/: CMakeLists.txt  activation_collector.cpp  activation_collector.h  conversion_pipeline.cpp  conversion_pipeline.h  gguf_reader.cpp  gguf_reader.h  kmeans.cpp  kmeans.h  model_config.h  model_reader.cpp  model_reader.h  quantizer.cpp  quantizer.h  router_calibrator.cpp  router_calibrator.h  safetensors_reader.cpp  safetensors_reader.h
src/dashboard/: CMakeLists.txt  dashboard.cpp  dashboard.h  sparkline.cpp  sparkline.h
src/engine/: CMakeLists.txt  attention.cpp  attention.h  benchmark.cpp  benchmark.h  inference_engine.cpp  inference_engine.h  metrics.cpp  metrics.h  oracle_lstm.cpp  oracle_lstm.h  oracle_prefetcher.cpp  oracle_prefetcher.h  perplexity.cpp  perplexity.h  prefetch_predictor.cpp  prefetch_predictor.h  rmsnorm.cpp  rmsnorm.h  rope.cpp  rope.h  router.cpp  router.h  sampling.cpp  sampling.h  shift_detector.cpp  shift_detector.h  sticky_router.cpp  sticky_router.h  tensor.h  thread_pool.cpp  thread_pool.h
src/format/: CMakeLists.txt  crc32.cpp  crc32.h  expert_format.h  expert_format_stub.cpp  expert_reader.cpp  expert_writer.cpp
src/io/: CMakeLists.txt  async_io_pool.cpp  async_io_pool.h  io_uring_backend.cpp  platform_io.h  platform_io_stub.cpp  pread_backend.cpp
src/kernel/: CMakeLists.txt  bitnet_avx512.cpp  bitnet_dispatch.cpp  bitnet_kernel.h  bitnet_neon.cpp  bitnet_scalar.cpp  packing.cpp  packing.h
src/server/: CMakeLists.txt  chat_template.cpp  chat_template.h  http_server.cpp  http_server.h  request_scheduler.cpp  request_scheduler.h  shared_metrics.cpp  shared_metrics.h
src/tokenizer/: CMakeLists.txt  tokenizer.cpp  tokenizer.h  tokenizer_stub.cpp
src/training/: CMakeLists.txt  badam.cpp  badam.h  data_loader.cpp  data_loader.h  galore.cpp  galore.h  lora.cpp  lora.h  trainer.cpp  trainer.h
src/vmm/: CMakeLists.txt  clock_pro.cpp  clock_pro.h  memory_budget.cpp  memory_budget.h  slab_allocator.cpp  slab_allocator.h  vmm.cpp  vmm.h
tests/: CMakeLists.txt  bench_bitnet_kernel.cpp  bench_packing.cpp  test_async_vmm.cpp  test_attention.cpp  test_badam.cpp  test_bench_command.cpp  test_benchmark_output.cpp  test_bitnet_kernel.cpp  test_chat_template.cpp  test_clock_pro.cpp  test_conversion_pipeline.cpp  test_crc32.cpp  test_data_loader.cpp  test_e2e_synthetic.cpp  test_expert_format.cpp  test_galore.cpp  test_gguf_reader.cpp  test_http_server.cpp  test_inference_engine.cpp  test_libneuralos.cpp  test_lora.cpp  test_memory_budget.cpp  test_metrics.cpp  test_model_config.cpp  test_oracle_lstm.cpp  test_oracle_prefetcher.cpp  test_packing.cpp  test_platform_io.cpp  test_prefetch_predictor.cpp  test_quantizer.cpp  test_request_scheduler.cpp  test_rmsnorm.cpp  test_rope.cpp  test_router.cpp  test_safetensors_reader.cpp  test_sampling.cpp  test_shared_metrics.cpp  test_shift_detector.cpp  test_slab_allocator.cpp  (+8 more)
