# ── NeuralOS Source Subdirectories ───────────────────────────────────────────
add_subdirectory(kernel)
add_subdirectory(io)
add_subdirectory(format)
add_subdirectory(tokenizer)
add_subdirectory(vmm)
add_subdirectory(converter)
add_subdirectory(engine)
add_subdirectory(api)
add_subdirectory(server)
add_subdirectory(training)
add_subdirectory(cli)
